[package]
name = "rs-wifi"
version = "0.1.2"
edition = "2024"
license = "Apache-2.0"
authors = ["Jesse Smith <jesses2025smith@gmail.com>"]
description = "`rswifi` is cross-platform wireless network (WiFi) management."
homepage = "https://github.com/jesses2025smith/rs-wifi"
repository = "https://github.com/jesses2025smith/rs-wifi"

categories = ["accessibility", "hardware-support",]
keywords = ["cross-platform", "wlan", "wifi", "wireless"]

[lib]
name = "rswifi"
path = "src/lib.rs"

[dependencies]
getset = "0.1"
thiserror = "2"
rsutil = { version = "0.1", features = ["log"] }
lazy_static = "1"

[target.'cfg(target_os = "windows")'.dependencies]
regex = "1"
windows = { version = "0.61", features = ["Win32_NetworkManagement_WiFi", "Win32_NetworkManagement_Ndis", "Win32_System_SystemInformation"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "socket"] }

[dev-dependencies]
anyhow = "1"
